_includes/css/layout.css
/*
* Skeleton V1.1
* Copyright 2011, Dave Gamache
* www.getskeleton.com
* Free to use under the MIT license.
* http://www.opensource.org/licenses/mit-license.php
* 8/17/2011
*/

/* Smaller than standard 960 (devices and browsers) */
@media only screen and (max-width: 959px) {
	#logo {
		font-size: 21px;
		margin-bottom: 15px; }
	nav .button {
		padding: 9px 20px 11px; }
}

/* Tablet Portrait size to standard 960 (devices and browsers) */
@media only screen and (min-width: 768px) and (max-width: 959px) {
	nav {
		width: 160px; }
	.sidebar h2 {
		font-size: 18px;
	}

	.sidebar ul {
		font-size: 14px;
	}
}

/* All Mobile Sizes (devices and browser) */
@media only screen and (max-width: 767px) {
	header h1 { font-size: 34px; line-height: 37px; }
	nav { position: relative; }
	nav ul,
	#logo { text-align: left; }
	/* .sidebar {
		display: none;
	} */
	.content {
		border: 0px;
		padding-left: 0px;
	}
}

/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
@media only screen and (min-width: 480px) and (max-width: 767px) {
	/* .sidebar {
		display: none;
	} */

	h1 {
		font-size: 28px;
		line-height: 36px;
	}
}

/* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
@media only screen and (max-width: 479px) {
	/* .sidebar {
		display: none;
	} */

	h1 {
		font-size: 24px;
		line-height: 32px;
	}

	h2 {
		font-size: 22px;
		line-height: 24px;
	}
}

#logo {
	width: 100px;
	height: 100px;
	border-radius: 5px;
}

